# funasr-api

./: .gitignore  README.md  config.toml  main.py  pyproject.toml
src/: app.py  config.py  srt.py  typing.py
src/api/: srt.py  srtGenerate.py  videoEmbed.py  vowelGenerate.py
src/api/model/: campplus.py  conformer.py  ctpunc.py  emotion2vec.py  fazh.py  fsmnkws.py  fsmnvad.py  paraformer.py  qwenaudio.py  sensevoice.py  whisper.py
src/utils/: ffm.py  segmentByEMS.py  video2audio.py
