[project]
name = "funasr-api"
version = "0.1.0"
description = "funasr embemed api"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.2",
    "clearvoice>=0.1.2",
    "demucs>=4.0.1",
    "fastapi[standard]>=0.119.0",
    "funasr>=1.2.7",
    "funasr-onnx>=0.3.2",
    "huggingface-hub>=0.35.3",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "modelscope>=1.30.0",
    "moviepy>=2.2.1",
    "numpy>=1.26.4",
    "onnx==1.18",
    "pydantic>=2.11.10",
    "pydub>=0.25.1",
    "python-multipart>=0.0.20",
    "scipy>=1.16.2",
    "soundfile==0.12.1",
    "srt>=3.5.3",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "uvicorn>=0.37.0",
    "webrtcvad>=2.0.10",
    "websockets>=15.0.1",
    "yt-dlp>=2025.10.22",
]
